Segundo Commit Html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
         <h1>Clique no botão</h1>
         <button>Botão</button>
     </section>
+    <main>
+        
+    <p> Receba a colaboração!  </p>
+
+<img src="/Luva-de-Pedreiro.jpeg" alt="Imagem">
+    </main>
+
 </body>
 </html>
