Colocando cor de fundo no index

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
         
     <p> Receba a colaboração!  </p>
 
-<img src="/Luva-de-Pedreiro.jpeg" alt="Imagem">
+    <img src="Luva-de-Pedreiro.jpeg" alt="Imagem">
     </main>
 
 </body>
 </html>
+
+<style>
+    *{
+        background-color: yellow;
+    }
+</style>
